# job-data-pipeline

./: .flake8  .gitignore  Dockerfile  Dockerfile.superset  Makefile  README.md  docker-compose.yaml  output.txt  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
lambda-layers/slack-alert-layer/: install.py
scripts/: backfill_silver.py  init-superset.sh
src/entrypoint/: handlers.py
src/main/: main_glints.py  main_jobstreet.py  main_kalibrr.py
src/scraper/: jobscraper_glints.py  jobscraper_jobstreet.py  jobscraper_kalibrr.py
src/silver_layer/: __init__.py  config.py  main.py  orchestrator.py  storage.py  transformations.py  validators.py
src/slack-alert/: slack_handler.py
src/utils/: data_validator.py  keywords.py  scraper_utils.py  time_utils.py  upload_to_s3.py
terraform/: .terraform.lock.hcl  backend.tf  main.tf  provider.tf  tfplan  tfplan3  tfplan_slack  variables.tf
terraform/step_functions/: JobScraperMachine.asl.json  analytics_views.sql  v_jobscraper_clean.sql
tests/: test_silver_config.py  test_silver_orchestrator.py  test_silver_storage.py  test_silver_transformations.py  test_silver_validators.py  test_utility.py
