[tool.poetry]
name = "job-data-pipeline"
version = "0.1.0"
description = "ETL pipeline for processing job data"
authors = ["S4njuuu3291 <sanju329121@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
black = "^23.9.1"
isort = "^5.12.0"
pandera = "^0.29.0"
pandas = "^3.0.1"
boto3 = {extras = ["stubs"], version = "^1.42.53"}
playwright = "^1.58.0"
dotenv = "^0.9.9"
boto3-stubs = {extras = ["s3"], version = "^1.42.53"}
tenacity = "^9.1.4"
pyarrow = "^23.0.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pandas-stubs = "^3.0.0.260204"
boto3-stubs = "^1.42.53"
autoflake = "^2.3.2"
ruff = "^0.15.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
